Fix spacing

--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -25,3 +25,7 @@
     display: flex;
     justify-content: center;
 }
+
+a {
+    text-decoration: none;
+}
